--- a/os2mo/templates/integrations/manager-terminator/service.yaml
+++ b/os2mo/templates/integrations/manager-terminator/service.yaml
@@ -2,20 +2,20 @@
 #
 # SPDX-License-Identifier: MPL-2.0
 ---
-{{- if .Values.manager_engagement_elevator.enabled }}
+{{- if .Values.manager_terminator.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: manager-engagement-elevator-service
+  name: manager-terminator-service
   labels:
-    app: manager-engagement-elevator
+    app: manager-terminator
   {{- with .Values.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
   selector:
-    app: manager-engagement-elevator
+    app: manager-terminator
   ports:
     - name: "8000"
       port: 8000
