--- a/os2mo/templates/integrations/manager-terminator/client-secret.yaml
+++ b/os2mo/templates/integrations/manager-terminator/client-secret.yaml
@@ -2,11 +2,11 @@
 #
 # SPDX-License-Identifier: MPL-2.0
 ---
-{{- if .Values.manager_engagement_elevator.enabled }}
+{{- if .Values.manager_terminator.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: manager-engagement-elevator-client-secret
+  name: manager-terminator-client-secret
   {{- with .Values.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
