--- a/os2mo/templates/integrations/dipex/cronjob.yaml
+++ b/os2mo/templates/integrations/dipex/cronjob.yaml
@@ -28,11 +28,6 @@ spec:
                 -  {{ . | quote}}
               {{- end }}
               resources:
-                requests:
-                  memory: "64Mi"
-                  cpu: "5m"
-                limits:
-                  memory: "128Mi"
-                  cpu: "10m"
+                {{- toYaml $.Values.dipex.resources | nindent 16 }}
           restartPolicy: Never
 {{- end }}
