--- a/os2mo/templates/integrations/sd-changed-at/deployment.yaml
+++ b/os2mo/templates/integrations/sd-changed-at/deployment.yaml
@@ -101,6 +101,11 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.sd_changed_at.sd_secret_name }}
                   key: app_dbpassword
+          {{- if .Values.sd_changed_at.enable_persistent_volume }}
+          volumeMounts:
+            - name: sd-pv
+              mountPath: /var/log/sdlon
+          {{- end }}
           ports:
             - containerPort: 5000
           resources:
@@ -166,4 +171,10 @@ spec:
                   key: app_dbpassword
           resources:
             {{- toYaml .Values.initContainers.resources | nindent 12 }}
+        {{- if .Values.sd_changed_at.enable_persistent_volume }}
+        - name: sd-pv
+          # PVC must be provided via Flux Kustomization
+          persistentVolumeClaim:
+            claimName: sd-pvc
+        {{- end }}
 {{- end }}
