--- a/os2mo/values.yaml
+++ b/os2mo/values.yaml
@@ -286,6 +286,7 @@ sd_changed_at:
   environment: {}
   cronjob_enabled: true
   cronjob_schedule: "*/5 6-17 * * *"
+  enable_persistent_volume: false
   resources:
     requests:
       memory: "256Mi"
