--- a/os2mo/templates/integrations/sd-changed-at/deployment.yaml
+++ b/os2mo/templates/integrations/sd-changed-at/deployment.yaml
@@ -105,7 +105,7 @@ spec:
             - name: LOG_TO_FILE
               value: "true"
             - name: LOG_FILE_BACKUP_COUNT
-              value: {{ .Values.sd_changed_at.number_of_days_to_persist_logs_to_files }}
+              value: "{{ .Values.sd_changed_at.number_of_days_to_persist_logs_to_files }}"
           volumeMounts:
             - name: sd-pv
               mountPath: /var/log/sdlon
