--- a/os2mo/templates/mo/metrics.yaml
+++ b/os2mo/templates/mo/metrics.yaml
@@ -12,5 +12,10 @@ spec:
     matchLabels:
       app: mo
   endpoints:
-  - port: "5000"
+    - port: "5000"
+      metricRelabelings:
+        - action: keep
+          regex: "placeholder"
+          sourceLabels:
+            - __name__
 {{- end }}
