--- a/os2mo/templates/integrations/sdtool/metrics.yaml
+++ b/os2mo/templates/integrations/sdtool/metrics.yaml
@@ -18,7 +18,7 @@ spec:
     - port: "80"
       metricRelabelings:
         - action: keep
-          regex: "amqp_publish_last_published|amqp_publish|amqp_publish_exceptions|amqp_publish_inprogress|amqp_publish_seconds|dipex_last_success_timestamp"
+          regex: "amqp_publish_last_published|amqp_publish|amqp_publish_exceptions|amqp_publish_inprogress|amqp_publish_seconds|dipex_.+"
           sourceLabels:
             - __name__
 {{- end }}
