fix: [#64273] don't proxy /openapi.json
Fixes
```
Error: INSTALLATION FAILED: 1 error occurred:
	* admission webhook "validate.nginx.ingress.kubernetes.io" denied the request: ingress contains invalid paths: path /openapi.json cannot be used with pathType Prefix
```

--- a/os2mo/templates/mo/ingress.yaml
+++ b/os2mo/templates/mo/ingress.yaml
@@ -29,7 +29,7 @@ spec:
           # This list should correspond with:
           # * https://git.magenta.dk/rammearkitektur/os2mo/-/blob/master/dev-environment/nginx-proxy.conf.template
           # * All the salt pillar ones
-          {{- range tuple "/openapi.json" "/graphql" "/metrics" "/docs" "/service/" "/version/" "/health/" }}
+          {{- range tuple  "/graphql" "/metrics" "/docs" "/service/" "/version/" "/health/" }}
           - path: {{ . }}
             pathType: Prefix
             backend:
