feat: [#63612] sdtool-plus minisync ingress

--- a/os2mo/values.yaml
+++ b/os2mo/values.yaml
@@ -344,6 +344,12 @@ sdtool_plus:
         repository: magentaaps/postgres-keycloak-init
         tag: 12.7-11.7
   email_secret_name: null
+  minisync:
+    ingress:
+      enabled: false
+      # https://kubernetes.github.io/ingress-nginx/examples/auth/basic/
+      basicAuthSecret: null
+
   environment: {}
   resources:
     requests:
