--- a/os2mo/templates/integrations/adguid_sync/deployment.yaml
+++ b/os2mo/templates/integrations/adguid_sync/deployment.yaml
@@ -15,6 +15,7 @@ metadata:
   {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: adguid-sync
