--- a/os2mo/templates/integrations/sdtool-plus/cronjob-sd-job-functions.yaml
+++ b/os2mo/templates/integrations/sdtool-plus/cronjob-sd-job-functions.yaml
@@ -24,7 +24,7 @@ spec:
             - name: cronjob-sd-job-functions-sdtool-plus
               image: curlimages/curl
               command: ["/bin/sh","-c"]
-              args: [ 'curl --silent --show-error --fail-with-body -X POST "http://sdtool-plus-service:8000/job-functions/sync"' ]
+              args: [ 'curl --silent --show-error --fail-with-body -X POST "http://sdtool-plus-service:8000/job-functions/sync?institution_identifier=VJ"' ]
               resources:
                 requests:
                   memory: "64Mi"
