--- a/os2mo/templates/integrations/sdtool-plus/deployment.yaml
+++ b/os2mo/templates/integrations/sdtool-plus/deployment.yaml
@@ -108,6 +108,11 @@ spec:
               value: {{ $value | quote }}
             {{- end }}
 
+          envFrom:
+          - secretRef:
+              name: sdtool-plus-environment-secret
+              optional: true
+
           ports:
             - containerPort: 8000
           resources:
