--- a/os2mo/templates/integrations/dipex/deployment.yaml
+++ b/os2mo/templates/integrations/dipex/deployment.yaml
@@ -39,6 +39,15 @@ spec:
                   key: client_secret
             - name: AUTH_SERVER
               value: "http://keycloak-service:8080/auth"
+            {{- if .Values.dipex.extraEnv }}
+            {{ toYaml .Values.dipex.extraEnv | indent 12 | trim }}
+            {{- end }}
+            - name: safetynet_sftp_password
+              valueFrom:
+                secretRef:
+                  name: safetynet_secret
+                  key: sftp_password
+                  optional: true
           volumeMounts:
             - name: settingsfile
               mountPath: "./opt/settings"
