--- a/os2mo/templates/integrations/dipex/deployment.yaml
+++ b/os2mo/templates/integrations/dipex/deployment.yaml
@@ -47,7 +47,7 @@ spec:
             - name: SAFETYNET_SFTP__PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: safetynet_secret
+                  name: safetynet-secret
                   key: sftp_password
                   optional: true
           volumeMounts:
