fix(os2sync): [#65287] address-type user_keys
Os2sync expects certain user-keys in the address-types which didn't match the ones set by init.

--- a/os2mo/templates/integrations/os2sync/init-config.yaml
+++ b/os2mo/templates/integrations/os2sync/init-config.yaml
@@ -17,10 +17,10 @@ data:
   config: |
     facets:
       org_unit_address_type:
-        contact:
+        Contact:
           title: "Henvendelsessted"
           scope: "DAR"
-        location:
+        Location:
           title: "Lokation"
           scope: "DAR"
 {{- end }}
