--- a/os2mo/templates/integrations/dipex/cronjob.yaml
+++ b/os2mo/templates/integrations/dipex/cronjob.yaml
@@ -35,7 +35,7 @@ spec:
                     key: client_secret
               - name: AUTH_SERVER
                 value: "http://keycloak-service:8080/auth"
-              {{- if .Values.dipex.extraEnv }}
+              {{- if and .Values.dipex .Values.dipex.extraEnv }}
               {{ toYaml .Values.dipex.extraEnv | indent 14 | trim }}
               {{- end }}
               - name: SAFETYNET_SFTP__PASSWORD
