ci: [#65122] new helm repo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,11 +49,9 @@ include:
     # Install shellcheck
     - apt-get update && apt-get install -y shellcheck
     # Install Helm
-    - curl https://baltocdn.com/helm/signing.asc | apt-key add -
-    - apt-get update && apt-get install -y apt-transport-https coreutils
-    - |-
-        echo "deb https://baltocdn.com/helm/stable/debian/ all main" |
-        tee /etc/apt/sources.list.d/helm-stable-debian.list
+    # https://helm.sh/docs/intro/install/#from-apt-debianubuntu
+    - curl -fsSL https://packages.buildkite.com/helm-linux/helm-debian/gpgkey | gpg --dearmor | tee /usr/share/keyrings/helm.gpg > /dev/null
+    - echo "deb [signed-by=/usr/share/keyrings/helm.gpg] https://packages.buildkite.com/helm-linux/helm-debian/any/ any main" | tee /etc/apt/sources.list.d/helm-stable-debian.list
     - apt-get update && apt-get install -y helm
     - curl -sL https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz | tar xz -C /usr/bin/
 
