--- a/os2mo/values.yaml
+++ b/os2mo/values.yaml
@@ -37,7 +37,7 @@ amqp:
   amqp_port: null
 
 os2mo:
-  replicaCount: 1
+  replicaCount: 0
   image:
     registry: docker.io
     repository: magentaaps/os2mo
@@ -58,11 +58,11 @@ os2mo:
     make_superuser: false
   resources:
     requests:
-      memory: "1024Mi"
-      cpu: "250m"
+      memory: "512Mi"
+      cpu: "100m"
     limits:
       memory: "2048Mi"
-      cpu: "2500m"
+      cpu: "1"
   headless: false
   keycloakRbacEnabled: true
   environment: {}
