--- a/os2mo/templates/mo/psql-deployment.yaml
+++ b/os2mo/templates/mo/psql-deployment.yaml
@@ -25,7 +25,7 @@ spec:
       containers:
         - name: psql
           image: "nixery.dev/shell/postgresql_17"
-          command: ["psql"]
+          command: ["/bin/sleep", "inf"]
           env:
             - name: PGHOST
               value: {{ .Values.database.host }}
@@ -48,9 +48,9 @@ spec:
               value: {{ .Values.database.mox.name }}
           resources:
             requests:
-              memory: "64Mi"
-              cpu: "100m"
+              memory: "8Mi"
+              cpu: "10m"
             limits:
               memory: "1024Mi"
-              cpu: "1"
+              cpu: "1000m"
       restartPolicy: Always
