--- a/os2mo/templates/integrations/os2sync/exporter-deployment.yaml
+++ b/os2mo/templates/integrations/os2sync/exporter-deployment.yaml
@@ -113,7 +113,7 @@ spec:
             - name: TF_VAR_client_name
               value: {{ $keycloak_client_id }}
             - name: TF_VAR_client_roles
-              value: '["reader", "service_api"]'
+              value: '["reader", "service_api", "acknowledge_event", "create_event_listener", "fetch_event"]'
             - name: TF_VAR_client_secret
               valueFrom:
                 secretKeyRef:
