--- a/os2mo/templates/integrations/xflow/client-secret.yaml
+++ b/os2mo/templates/integrations/xflow/client-secret.yaml
@@ -2,11 +2,11 @@
 #
 # SPDX-License-Identifier: MPL-2.0
 ---
-{{- if .Values.sdtool_plus.enabled }}
+{{- if .Values.xflow.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: sdtool-plus-client-secret
+  name: xflow-client-secret
   {{- with .Values.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
