feat: add missing cronjob_schedule values field

--- a/os2mo/values.yaml
+++ b/os2mo/values.yaml
@@ -618,6 +618,7 @@ os2mo_smtp:
 xflow:
   enabled: false
   cronjob_enabled: false
+  cronjob_schedule: "0 0 * * *"  # Once a day, at midnight
   image:
     registry: docker.io
     repository: magentaaps/os2mo-xflow
